Basic centralized failure recovery with partition ownership